force "." in the PATH, so that the testsuite passes L523-020

--- a/regtests/makefile
+++ b/regtests/makefile
@@ -23,7 +23,7 @@ build:
 		-XPRJ_BUILD=$(PRJ_BUILD) -Pregtests
 
 test:  build
-	./testsuite.py --jobs=4
+	PATH=.:${PATH} ./testsuite.py --jobs=4
 
 clean:
 	-$(GNAT) clean -XLIBRARY_TYPE=static \
