--- a/docs/makefile
+++ b/docs/makefile
@@ -1,7 +1,7 @@
 ############################################################################
-#                             Templates_Parser                             #
+#                              Ada Web Server                              #
 #                                                                          #
-#                      Copyright (C) 2003-2013, AdaCore                    #
+#                     Copyright (C) 2003-2013, AdaCore                     #
 #                                                                          #
 #  This is free software;  you can redistribute it  and/or modify it       #
 #  under terms of the  GNU General Public License as published  by the     #
@@ -16,127 +16,174 @@
 #  to http://www.gnu.org/licenses for a complete copy of the license.      #
 ############################################################################
 
-.SILENT: doc clean
-
-MAKEINFO        = $(shell which makeinfo 2> /dev/null)
-TEXI2DVI        = $(shell which texi2dvi 2> /dev/null)
-PDFTEX          = $(shell which pdftex 2> /dev/null)
-
-TMPLT	  = demo.tmplt user.tmplt table.tmplt table_section.tmplt \
-	    table_if.tmplt matrix.tmplt table_block.tmplt table_inline.tmplt \
-	    if_inline.tmplt macro.tmplt
-
-TMPLTTEXI = $(TMPLT:=.texi)
+# Makefile for Sphinx documentation
+#
 
 ADBFILES  = demo.adb user1.adb user2.adb table.adb table_section.adb \
 	    table_if.adb matrix.adb table_inline.adb if_inline.adb macro.adb
 
 EXEFILES  = $(ADBFILES:.adb=)
-ADAFILES  = $(ADBFILES)
-ALIFILES  = $(ADSFILES:.ads=.ali) $(ADBFILES:.adb=.ali)
 RESFILES  = $(ADBFILES:=.res)
-TEXIFILES = $(ADBFILES:=.texi) $(ADSFILES:=.texi) $(ADAFILES_NORUN:=.texi) \
-		$(TMPLTTEXI)
 
-GFLAGS	  = -I../src -I../include
+# You can set these variables from the command line.
+SPHINXOPTS    =
+SPHINXBUILD   = sphinx-build
+PAPER         =
+BUILDDIR      = build
 
-GNATMAKE_FLAGS ?= -q
+# Internal variables.
+PAPEROPT_a4     = -D latex_paper_size=a4
+PAPEROPT_letter = -D latex_paper_size=letter
+ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
+# the i18n builder cannot share the environment and doctrees with the others
+I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 
-DOCS	  = templates_parser.info templates_parser.html \
-		templates_parser.txt templates_parser.pdf
+.PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest gettext
 
-APIFILES    = ../src/templates_parser.ads.texi \
-	      ../src/templates_parser-debug.ads.texi \
-	      ../src/templates_parser-utils.ads.texi \
-	      ../xsrc/templates_parser-xml.ads.texi
-
-ALLDEPS = $(ADBFILES) $(ADSFILES) $(EXEFILES) $(TEXIFILES) $(TMPLTTEXI) \
-	$(RESFILES) $(APIFILES)
-
-doc: $(ALLDEPS) $(DOCS)
-
-%.pdf: %.texi $(ADBFILES)
-ifneq (${TEXI2DVI},)
-ifneq (${PDFTEX},)
-	echo Building $@
-	${TEXI2DVI} -p --expand --clean --quiet $<
-else
-	@echo "------------------------------------------------"
-	@echo "pdftex not found, cannot build PDF documentation"
-	@echo "------------------------------------------------"
-endif
-else
-	@echo "--------------------------------------------------"
-	@echo "texi2dvi not found, cannot build PDF documentation"
-	@echo "--------------------------------------------------"
-endif
-
-%.info: %.texi $(ADBFILES)
-ifneq (${MAKEINFO},)
-	echo Building $@
-	-${MAKEINFO} $<
-else
-	@echo "---------------------------------------------------"
-	@echo "makeinfo not found, cannot build INFO documentation"
-	@echo "---------------------------------------------------"
-endif
-
-%.html: %.texi $(ADBFILES)
-ifneq (${MAKEINFO},)
-	echo Building $@
-	-${MAKEINFO} --html --no-split --css-include=tp.css --ifinfo $<
-else
-	@echo "---------------------------------------------------"
-	@echo "makeinfo not found, cannot build HTML documentation"
-	@echo "---------------------------------------------------"
-endif
-
-%.txt: %.texi $(ADBFILES)
-ifneq (${MAKEINFO},)
-	echo Building $@
-	-${MAKEINFO} --plaintext --no-headers $< --output $@
-else
-	@echo "---------------------------------------------------"
-	@echo "makeinfo not found, cannot build TEXT documentation"
-	@echo "---------------------------------------------------"
-endif
-
-$(ADBFILES) $(ADSFILES): all_sources.ada
-	$(GNAT) chop -w all_sources.ada
-
-../tp_xmlada.gpr:
-	cp ../config/tp_xmlada_dummy.gpr ../tp_xmlada.gpr
-
-$(EXEFILES): ../tp_xmlada.gpr $(ADBFILES) $(ADSFILES)
-	$(GNAT) make -p -XLIBRARY_TYPE=$(DEFAULT_LIBRARY_TYPE) \
-		-XPRJ_BUILD=$(PRJ_BUILD) \
-		-XTP_XMLADA=Disabled -Pdocs $(EXEFILES) $(GNATMAKE_FLAGS)
-
-%.adb.res: %.adb
-	echo "@TPEXP{"         	  > $<.res
-	./`basename $@ .adb.res` >> $<.res
-	echo "}"		 >> $<.res
-
-%.adb.html: %.adb
-	`basename $@ .adb.html` >> $<.html
-
-%.ads.texi: %.ads gentexifile
-	./gentexifile $< NOGROUP
-
-%.adb.texi: %.adb  %.adb.res gentexifile
-	./gentexifile $<
-
-%.tmplt.texi: %.tmplt gentexifile
-	./gentexifile $<
-
-force:
+help:
+	@echo "Please use \`make <target>' where <target> is one of"
+	@echo "  html       to make standalone HTML files"
+	@echo "  dirhtml    to make HTML files named index.html in directories"
+	@echo "  singlehtml to make a single large HTML file"
+	@echo "  pickle     to make pickle files"
+	@echo "  json       to make JSON files"
+	@echo "  htmlhelp   to make HTML files and a HTML help project"
+	@echo "  qthelp     to make HTML files and a qthelp project"
+	@echo "  devhelp    to make HTML files and a Devhelp project"
+	@echo "  epub       to make an epub"
+	@echo "  latex      to make LaTeX files, you can set PAPER=a4 or PAPER=letter"
+	@echo "  latexpdf   to make LaTeX files and run them through pdflatex"
+	@echo "  text       to make text files"
+	@echo "  man        to make manual pages"
+	@echo "  texinfo    to make Texinfo files"
+	@echo "  info       to make Texinfo files and run them through makeinfo"
+	@echo "  gettext    to make PO message catalogs"
+	@echo "  changes    to make an overview of all changed/added/deprecated items"
+	@echo "  linkcheck  to check all external links for integrity"
+	@echo "  doctest    to run all doctests embedded in the documentation (if enabled)"
 
 clean:
-	-$(GNAT) clean -q -XLIBRARY_TYPE=$(DEFAULT_LIBRARY_TYPE) \
-		-XPRJ_BUILD=$(PRJ_BUILD) -Pdocs $(EXEFILES)
-	-rm -f $(EXEFILES) $(ADAFILES) $(TEXIFILES) *.res *.o *.ali genout \
-		*.aux *.cp* *.fn *.ky *.pg *.toc *.tp *.vr *.dvi *.log \
-		*.exe templates_parser*.ads.texi ada.sed \
-		templates_parser.tar.gz
-	-rm -f templates_parser.html templates_parser.pdf \
-		templates_parser.info* templates_parser.txt
+	-rm -rf $(BUILDDIR)
+
+%.adb.res: src/%.adb
+	( cd build/bin; \
+	./`basename $@ .adb.res` > ../samples/`basename $<.res` )
+
+build-sample:
+	mkdir -p build/obj build/bin build/samples
+	gnat make -m -Pdocs $(EXEFILES)
+	cp src/*.tmplt build/bin
+
+setup: build-sample $(RESFILES)
+	gnat clean -q -Pdocs
+
+html: setup
+	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
+	@echo
+	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
+
+dirhtml:
+	$(SPHINXBUILD) -b dirhtml $(ALLSPHINXOPTS) $(BUILDDIR)/dirhtml
+	@echo
+	@echo "Build finished. The HTML pages are in $(BUILDDIR)/dirhtml."
+
+singlehtml:
+	$(SPHINXBUILD) -b singlehtml $(ALLSPHINXOPTS) $(BUILDDIR)/singlehtml
+	@echo
+	@echo "Build finished. The HTML page is in $(BUILDDIR)/singlehtml."
+
+pickle:
+	$(SPHINXBUILD) -b pickle $(ALLSPHINXOPTS) $(BUILDDIR)/pickle
+	@echo
+	@echo "Build finished; now you can process the pickle files."
+
+json:
+	$(SPHINXBUILD) -b json $(ALLSPHINXOPTS) $(BUILDDIR)/json
+	@echo
+	@echo "Build finished; now you can process the JSON files."
+
+htmlhelp:
+	$(SPHINXBUILD) -b htmlhelp $(ALLSPHINXOPTS) $(BUILDDIR)/htmlhelp
+	@echo
+	@echo "Build finished; now you can run HTML Help Workshop with the" \
+	      ".hhp project file in $(BUILDDIR)/htmlhelp."
+
+qthelp:
+	$(SPHINXBUILD) -b qthelp $(ALLSPHINXOPTS) $(BUILDDIR)/qthelp
+	@echo
+	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
+	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/Templates_Parser.qhcp"
+	@echo "To view the help file:"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/Templates_Parser.qhc"
+
+devhelp:
+	$(SPHINXBUILD) -b devhelp $(ALLSPHINXOPTS) $(BUILDDIR)/devhelp
+	@echo
+	@echo "Build finished."
+	@echo "To view the help file:"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/Templates_Parser"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/Templates_Parser"
+	@echo "# devhelp"
+
+epub:
+	$(SPHINXBUILD) -b epub $(ALLSPHINXOPTS) $(BUILDDIR)/epub
+	@echo
+	@echo "Build finished. The epub file is in $(BUILDDIR)/epub."
+
+latex:
+	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
+	@echo
+	@echo "Build finished; the LaTeX files are in $(BUILDDIR)/latex."
+	@echo "Run \`make' in that directory to run these through (pdf)latex" \
+	      "(use \`make latexpdf' here to do that automatically)."
+
+latexpdf:
+	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
+	@echo "Running LaTeX files through pdflatex..."
+	$(MAKE) -C $(BUILDDIR)/latex all-pdf
+	@echo "pdflatex finished; the PDF files are in $(BUILDDIR)/latex."
+
+text:
+	$(SPHINXBUILD) -b text $(ALLSPHINXOPTS) $(BUILDDIR)/text
+	@echo
+	@echo "Build finished. The text files are in $(BUILDDIR)/text."
+
+man:
+	$(SPHINXBUILD) -b man $(ALLSPHINXOPTS) $(BUILDDIR)/man
+	@echo
+	@echo "Build finished. The manual pages are in $(BUILDDIR)/man."
+
+texinfo:
+	$(SPHINXBUILD) -b texinfo $(ALLSPHINXOPTS) $(BUILDDIR)/texinfo
+	@echo
+	@echo "Build finished. The Texinfo files are in $(BUILDDIR)/texinfo."
+	@echo "Run \`make' in that directory to run these through makeinfo" \
+	      "(use \`make info' here to do that automatically)."
+
+info:
+	$(SPHINXBUILD) -b texinfo $(ALLSPHINXOPTS) $(BUILDDIR)/texinfo
+	@echo "Running Texinfo files through makeinfo..."
+	make -C $(BUILDDIR)/texinfo info
+	@echo "makeinfo finished; the Info files are in $(BUILDDIR)/texinfo."
+
+gettext:
+	$(SPHINXBUILD) -b gettext $(I18NSPHINXOPTS) $(BUILDDIR)/locale
+	@echo
+	@echo "Build finished. The message catalogs are in $(BUILDDIR)/locale."
+
+changes:
+	$(SPHINXBUILD) -b changes $(ALLSPHINXOPTS) $(BUILDDIR)/changes
+	@echo
+	@echo "The overview file is in $(BUILDDIR)/changes."
+
+linkcheck:
+	$(SPHINXBUILD) -b linkcheck $(ALLSPHINXOPTS) $(BUILDDIR)/linkcheck
+	@echo
+	@echo "Link check complete; look for any errors in the above output " \
+	      "or in $(BUILDDIR)/linkcheck/output.txt."
+
+doctest:
+	$(SPHINXBUILD) -b doctest $(ALLSPHINXOPTS) $(BUILDDIR)/doctest
+	@echo "Testing of doctests in the sources finished, look at the " \
+	      "results in $(BUILDDIR)/doctest/output.txt."
