Transmit the PRJ_BUILD for the library to docs and regtests.
So that they avoid rebuilding the library in case it differs
from the default. Also specify TARGET and VERSION because they
do not have a default.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -82,7 +82,8 @@ $(RESDIR):
 .PHONY: build-sample
 build-sample:
 	$(GPRBUILD) -p -m -Pdocs $(EXEFILES) \
-	  --subdirs=$(SDIR)/static -XVERSION=$(VERSION)
+	  --subdirs=$(SDIR)/static \
+	  $(foreach v,PRJ_BUILD TARGET VERSION,"-X$(v)=$($(v))")
 
 # Executable and result will be removed with BUILDDIR.
 
